2011-12-02  Gustavo Noronha Silva  <gns@gnome.org>

        Add libffi to the jhbuild modules list as a glib dependency.

        Rubber-stamped by Martin Robinson.

        * gtk/jhbuild.modules:

2011-12-02  Gustavo Noronha Silva  <gns@gnome.org>

        Build fix. Use internal pcre on glib, make gnutls a dependency of
        glib-networking, unset AR_FLAGS for jhbuild builds, and run jhbuild
        in non-interactive mode.

        * Scripts/update-webkitgtk-libs:
        * gtk/jhbuild.modules:
        * gtk/run-with-jhbuild:

2011-12-02  Adam Roben  <aroben@apple.com>

        Fix for Python 2.6

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (RunUnitTests.countFailures): Removed the flags parameter to re.split, which was only added
        in Python 2.7, and used whitespace instead of start-of-string/end-of-string markers when
        searching for "Tests that timed out:" etc. This makes our check less strict, but it
        shouldn't matter given the kinds of content we parse.

2011-12-02  Adam Roben  <aroben@apple.com>

        Fix names of failed/timed out tests in run-api-tests output

        Fixes <http://webkit.org/b/73663> run-api-tests prints suite names twice for failed or timed
        out tests

        We were ending up with the suite name doubled (e.g., "WebKit2.WebKit2.MouseMoveAfterCrash").

        Reviewed by Simon Fraser.

        * Scripts/run-api-tests:
        (runTest): Don't prepend the suite name to $test. It's already been prepended at the start
        of this function.

2011-11-29  Martin Robinson  <mrobinson@igalia.com>

        [GTK] generate-gtkdoc should respect build type
        https://bugs.webkit.org/show_bug.cgi?id=73296

        Reviewed by Philippe Normand.

        * Scripts/webkitdirs.pm:
        (buildAutotoolsProject): Pass the --debug to the generate-gtkdoc script.
        * gtk/common.py: If --build is passed give preference to the Debug build directory.
