@@ -1,3 +1,13 @@
+2011-12-02  Alice Boxhall  <aboxhall@chromium.org>
+
+        Make _build_path check more thoroughly that build paths exist.
+        https://bugs.webkit.org/show_bug.cgi?id=73601
+
+        Reviewed by Ojan Vafai.
+
+        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
+        (ChromiumMacPort._build_path):
+
 2011-12-02  Gustavo Noronha Silva  <gns@gnome.org>
 
         Add libffi to the jhbuild modules list as a glib dependency.
